[package]
name = "beamer-quickie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
cairo = "0.0.4"
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
itertools = "0.12.0"
