[package]
name = "beamer-quickie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
cairo-rs = { version = "0.18.5", features = ["svg", "v1_16"] }
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
itertools = "0.12.0"
lazy_static = "1.4.0"
libc = "0.2.152"
poppler-rs = "0.22.0"
synctex_sys = "0.1.1"

[build-dependencies]
glib-build-tools = "0.18.0"
